encapsulamento, atualização para JDK 17 e GCE do erpj-br (vejas os comentários)
Configuração para executar no Google Compute Engine do erpj-br
Alterando a o metodo clazz.newInstance(); ->  clazz.getDeclaredConstructor().newInstance(); o antigo foi depreciado
Removenod a utilização de um atributo em uma classe onde não precisa, a variável pode ter escopo do método